complete without proper navbar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
      <div class="container">
          <div class="row">
             <div class="col mx-4 my-5" style="width:60%">
-                <img src="resources/images/information-main.jpg" class="img-fluid" alt="information-main"> 
+                <img src="resources/images/information-main.jpg" class="img-fluid" alt="information-main" 
+                style="height: 100%";> 
              </div>
              <div class="col my-5">
                  <div class="row">
@@ -200,6 +201,60 @@
                 Thesis exhibit
             </h1>
          </div>
+         <div class="row">
+             <div class="col">
+                <div class="embed-responsive embed-responsive-21by9">
+                    <iframe class="embed-responsive-item" 
+                    src="resources/videos/thesis.mp4" allowfullscreen style="width: 100%"; style="height: 100%";>
+                </iframe>
+                </div>
+             </div>
+             <div class="col">
+                 <div class="row bg-light">
+                     <div class="col my-3">
+                        <img src="resources/images/thesis-fisma.jpg" class="img-fluid" 
+                       alt="thesis-fisma"> 
+                     </div>
+                     <div class="col my-5">
+                         <h3> Fisma: Design and Prototype</h3>
+                         <p>Designer showcase of new prototype product</p>
+                     </div>
+                 </div>
+                 <div class="row">
+                    <div class="col my-3">
+                       <img src="resources/images/thesis-now-and-then.jpg" class="img-fluid" 
+                      alt="thesis-fisma"> 
+                    </div>
+                    <div class="col my-5">
+                        <h3> Now and then </h3>
+                        <p>Research study about New York</p>
+                    </div>
+                </div>
+             </div>
+         </div>
+         <div class="row">
+             <h2>Reimagine urban</h2>
+             <p>
+                "Curabitur vitae libero in ipsum porttitor consequat.
+                Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna.
+                Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor 
+                consequat, tristique ligula."
+            </p>
+         </div>
      </div>   
+     <!-- Footer -->
+    
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>&copy; 2016 Colmar Academy. All rights reserved</p>  
+                </div>
+                <div class="col">
+                    <p class="text-right">Terms privacy</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
