--- a/index.html
+++ b/index.html
@@ -11,27 +11,32 @@
 </head>
 <body>
     <!-- Navbar component -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand">
-            <img src="resources/images/ic-logo.svg" width="30" height="32" alt="ic-logo">
+    <nav class="container">
+        <div class="row">
+            <div class=" col navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand ml-auto">
+                 <img src="resources/images/ic-logo.svg" width="30" height="32" alt="ic-logo">
                 <strong>COLMAR</strong>ACADEMY    
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                   <a class="nav-link" href="#">On campus <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Online</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">or companies</a>
-                </li>               
-                <li class="nav-item active">
-                    <a class="nav-link disabled" href="#">Sign in</a>
-                </li>
-            </ul>
-        </div>   
+                </a>
+                <div class=" justify-content-end collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">On campus <span class="sr-only">(current)</span></a>
+                         </li>
+                         <li class="nav-item active">
+                             <a class="nav-link" href="#">Online</a>
+                         </li>
+                         <li class="nav-item active">
+                              <a class="nav-link" href="#">or companies</a>
+                         </li>               
+                         <li class="nav-item active">
+                            <a class="nav-link disabled" href="#">Sign in</a>
+                        </li>
+                    </ul>
+                </div>  
+            </div>  
+     
+        </div>
     </nav>
    
      <div class="container bg-light">
