--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    
      <div class="container bg-light">
          <div class="row">
-             <div class="col mx-4 my-5">
+             <div class="col-8 mx-4 my-5">
                 <img src="resources/images/banner.jpg" class="img-fluid" alt="banner">     
              </div>
              <div class="col my-5">
@@ -55,7 +55,7 @@
      </div> 
      <div class="container">
          <div class="row">
-            <div class="col mx-4 my-5" style="width:60%">
+            <div class="col-8 mx-4 my-5" style="width:60%">
                 <img src="resources/images/information-main.jpg" class="img-fluid" alt="information-main" 
                 style="height: 100%";> 
              </div>
@@ -65,10 +65,10 @@
                         <img src="resources/images/information-orientation.jpg" class="img-fluid"
                         alt="information-orientation">   
                      </div>
-                     <div class="col my-5">
+                     <div class="col">
                          <h3>Orientation date</h3>
                          <p>Tue 10/11 & Wed 10/12: 8am -3pm</p>
-                         <p class="text-primary">Read more</p>
+                         <a href="#" class="card-link">Read more</a>
                      </div>
                  </div>
                  <div class="row my-5">
@@ -76,10 +76,10 @@
                        <img src="resources/images/information-campus.jpg" class="img-fluid" 
                        alt="information-campus">   
                     </div>
-                    <div class="col my-5">
+                    <div class="col">
                         <h3>Our campus</h3>
                         <p>Find which campus is close by u</p>
-                        <p class="text-primary">Read more</p>
+                        <a href="#" class="card-link">Read more</a>
                     </div>
                 </div>
                  
@@ -88,7 +88,7 @@
      </div>
      <div class="container">
          <div class="row">
-             <div class="col">
+             <div class="col-8">
                 <h1 class="display-4 font-weight-bold">
                     It doesn't hurt to keep practicing
                 </h1>
@@ -116,6 +116,7 @@
              </div>
          </div>
      </div>
+     <!-- cards -->
      <div class="container bg-light">
          <div class="row justify-content-center my-5">
             <h1 class="display-4 font-weight-bold">
@@ -200,6 +201,7 @@
          </div>
      </div>
      </div>
+     <!-- Thesis exhibit -->
      <div class="container">
         <div class="row justify-content-center my-5">
             <h1 class="display-4 font-weight-bold">
@@ -207,7 +209,7 @@
             </h1>
          </div>
          <div class="row">
-             <div class="col">
+             <div class="col-8">
                 <div class="embed-responsive embed-responsive-21by9">
                     <iframe class="embed-responsive-item" 
                     src="resources/videos/thesis.mp4" allowfullscreen style="width: 100%"; style="height: 100%";>
@@ -220,7 +222,7 @@
                         <img src="resources/images/thesis-fisma.jpg" class="img-fluid" 
                        alt="thesis-fisma"> 
                      </div>
-                     <div class="col my-5">
+                     <div class="col my-2">
                          <h3> Fisma: Design and Prototype</h3>
                          <p>Designer showcase of new prototype product</p>
                      </div>
@@ -228,9 +230,9 @@
                  <div class="row">
                     <div class="col my-3">
                        <img src="resources/images/thesis-now-and-then.jpg" class="img-fluid" 
-                      alt="thesis-fisma"> 
+                      alt="thesis-now-and-then"> 
                     </div>
-                    <div class="col my-5">
+                    <div class="col my-3">
                         <h3> Now and then </h3>
                         <p>Research study about New York</p>
                     </div>
