change the background color in navbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar component -->
     <nav class="container">
         <div class="row">
-            <div class=" col navbar navbar-expand-lg navbar-light bg-light">
+            <div class=" col navbar navbar-expand-lg navbar-light bg-white">
                 <a class="navbar-brand ml-auto">
                  <img src="resources/images/ic-logo.svg" width="30" height="32" alt="ic-logo">
                 <strong>COLMAR </strong>ACADEMY    
