--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class=" col navbar navbar-expand-lg navbar-light bg-white">
                 <a class="navbar-brand">
-                    <img src="resources/images/ic-logo.svg" width="30" height="32" alt="ic-logo">
+                    <img src="resources/images/ic-logo.svg" width="50" height="50" alt="ic-logo">
                     <span class="d-none d-md-inline-block"><strong>COLMAR</strong>ACADEMY</span> 
                 </a>
                 <a class="d-lg-none">
@@ -39,7 +39,7 @@
                               <a class="nav-link" href="#">or companies</a>
                          </li>               
                          <li class="nav-item active">
-                            <a class="nav-link disabled" href="#">Sign in</a>
+                            <a class="nav-link" href="#">Sign in</a>
                         </li>
                     </ul>
                 </div>  
@@ -47,12 +47,12 @@
         </div>
     </nav>
        <!-- Banner content -->
-    <div class="container bg-light">
+    <div class="container" style="background-color:#dcdcdc";>
          <div class="row">
              <div class="col-8 d-none d-md-block mx-4 my-5">
                 <img src="resources/images/banner.jpg" class="img-fluid" alt="banner">     
              </div>
-             <div class="col d-lg-none">
+             <div class="d-lg-none">
                 <img src="resources/images/banner.jpg" class="img-fluid" alt="banner">     
              </div>
              <div class="col my-5">
@@ -184,7 +184,7 @@
         <p>&copy; 2016 Colmar Academy. All rights reserved</p>   
     </footer>
     <!-- Course list - cards -->
-    <div class="container d-none d-md-block bg-light">
+    <div class="container d-none d-md-block" style="background-color:#dcdcdc">
         <div class="row justify-content-center my-5">
             <h1 class="display-4 font-weight-bold">
                 Start learning
@@ -228,47 +228,48 @@
                     </div>
                   </div>
              </div>
-             <div class="row my-5 mx-1">
-                <div class="col">
-                   <div class="card" style="width: 18rem;">
-                       <img class="card-img-top" src="resources/images/course-data.jpg" alt="course-data">
-                       <div class="card-body">
+        </div>
+        <div class="row my-5 mx-1">
+            <div class="col">
+               <div class="card" style="width: 18rem;">
+                   <img class="card-img-top" src="resources/images/course-data.jpg" alt="course-data">
+                    <div class="card-body">
                          <h5 class="card-title">Data</h5>
                          <div class="card-tex"t>
-                            <p>COURSES</p> 
-                            <P>Data Science, Big Data, SQL, Data visualization</P> 
-                         </div>
-                       </div>
-                     </div>
+                                <p>COURSES</p> 
+                                <P>Data Science, Big Data, SQL, Data visualization</P> 
+                        </div>
+                    </div>
                 </div>
-                <div class="col mx-5">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="resources/images/course-business.jpg" alt="course-business">
-                        <div class="card-body">
-                          <h5 class="card-title">Business/h5>
-                          <div class="card-tex"t>
+            </div>
+            <div class="col mx-5 mb-2">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="resources/images/course-business.jpg" alt="course-business">
+                    <div class="card-body">
+                        <h5 class="card-title">Business/h5>
+                        <div class="card-tex"t>
                              <p>COURSES</p> 
                              <P>Product Development, Business Development, Startup</P> 
-                          </div>
                         </div>
-                      </div>
-                 </div>
-                 <div class="col mx-4">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="resources/images/course-marketing.jpg" alt="course-marketing">
-                        <div class="card-body">
+                    </div>
+                </div>
+            </div>
+            <div class="col mx-4 mb-5">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="resources/images/course-marketing.jpg" alt="course-marketing">
+                    <div class="card-body">
                           <h5 class="card-title">Marketing</h5>
-                          <div class="card-tex"t>
-                             <p>COURSES</p> 
+                        <div     class="card-tex"t>
+                            <p>COURSES</p> 
                              <P>Analytics, Content Marketing, Mobile Marketing</P> 
-                          </div>
                         </div>
-                      </div>
+                    </div>
                  </div>
+            </div>
          </div>
     </div>
          <!-- Thesis exhibit -->
-    <div class="container">
+    <div class="container d-none d-md-block">
         <div class="row justify-content-center my-5">
             <h1 class="display-4 font-weight-bold">
                 Thesis exhibit
@@ -318,7 +319,7 @@
          </div>
     </div>   
      <!-- Footer -->
-    <footer>
+    <footer class="d-none d-md-block">
         <div class="container">
             <div class="row">
                 <div class="col">
