--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                 </p>
                 <h4 class="my-5">Emanuel, Sr Strategist at Hiring.com</h4>
              </div>
-             <div class="col bg-light mb-5">
+             <div class="col mb-5" style="background-color:#dcdcdc";>
                  <div class="row mx-4 my-4">
                     <div class="col">
-                    <img src="resources/images/information-guest-lecture.jpg" class="img-fluid" 
+                    <img src="resources/images/information-guest-lecture.jpg" class="img-fluid" height="50"
                     alt="information-guest-lecture"> 
                      </div>
                     <div class="col">
@@ -284,7 +284,7 @@
                 </div>
              </div>
              <div class="col">
-                 <div class="row bg-light">
+                 <div class="row" style="background-color:#dcdcdc";>
                      <div class="col my-3">
                         <img src="resources/images/thesis-fisma.jpg" class="img-fluid" 
                        alt="thesis-fisma"> 
